# git-purge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src-tauri/src/commands/: auth.rs  backup.rs  branch.rs  history.rs  mod.rs  repo.rs  settings.rs  system.rs  tests.rs
apps/desktop/src-tauri/tests/: architecture.rs
apps/desktop/src/api/: ipc.ts
apps/desktop/src/components/: ModalDialog.vue  ToastContainer.vue
apps/desktop/src/composables/: useTheme.spec.ts  useTheme.ts
apps/desktop/src/router/: index.ts
apps/desktop/src/stores/: backups.spec.ts  backups.ts  branches.spec.ts  branches.ts  history.spec.ts  history.ts  repos.spec.ts  repos.ts  settings.spec.ts  settings.ts  toast.spec.ts  toast.ts
apps/desktop/src/styles/: global.css  tokens.css
apps/desktop/src/utils/: date.spec.ts  date.ts
apps/desktop/src/views/: AuthView.spec.ts  AuthView.vue  BackupsView.spec.ts  BackupsView.vue  BranchesView.vue  CleanupView.vue  DashboardView.spec.ts  DashboardView.vue  DiffView.spec.ts  DiffView.vue  HistoryView.spec.ts  HistoryView.vue  PlanView.spec.ts  PlanView.vue  SettingsView.spec.ts  SettingsView.vue
apps/desktop/tests/: verify-standalone.sh
ci/: package-tarball.sh
crates/gitpurge-cli/: Cargo.toml
crates/gitpurge-cli/src/: cli.rs  confirm.rs  exit.rs  main.rs
crates/gitpurge-cli/src/cmd/: auth.rs  backup.rs  completions.rs  delete.rs  diff.rs  install_cli.rs  mod.rs  repo.rs  reporting.rs  scan.rs  show.rs  stubs.rs  ui.rs
crates/gitpurge-cli/tests/: architecture.rs  cli_snapshots.rs  cli_tests.rs  exit_codes.rs
crates/gitpurge-cli/tests/snapshots/: cli_snapshots__backup_list.snap  cli_snapshots__completions_zsh.snap  cli_snapshots__completions_zsh.snap.new  cli_snapshots__delete_dryrun_human.snap  cli_snapshots__delete_execute_human.snap  cli_snapshots__diff_json.snap  cli_snapshots__diff_stat_human.snap  cli_snapshots__history_list.snap  cli_snapshots__plan_human.snap  cli_snapshots__plan_json.snap  cli_snapshots__repo_add_success.snap  cli_snapshots__repo_list_empty.snap  cli_snapshots__repo_list_with_repo.snap  cli_snapshots__repo_show.snap  cli_snapshots__scan_human.snap  cli_snapshots__scan_json.snap  cli_snapshots__show_file.snap  cli_snapshots__show_tree.snap
crates/gitpurge-core/: Cargo.toml
crates/gitpurge-core/benches/: engine_bench.rs
crates/gitpurge-core/src/: clock.rs  config.rs  error.rs  lib.rs  progress.rs
crates/gitpurge-core/src/action/: archive.rs  delete.rs  guard.rs  mod.rs
crates/gitpurge-core/src/auth/: credential.rs  file_store.rs  keyring_store.rs  mod.rs  resolver.rs
crates/gitpurge-core/src/backup/: mirror.rs  mod.rs  prune.rs  restore.rs  snapshot.rs  verify.rs
crates/gitpurge-core/src/diff/: mod.rs
crates/gitpurge-core/src/engine/: auth.rs  backup.rs  core.rs  execute.rs  git_ops.rs  mod.rs  report_history.rs  scan_plan.rs  tests.rs
crates/gitpurge-core/src/engine/snapshots/: gitpurge_core__engine__tests__audit_report_markdown.snap  gitpurge_core__engine__tests__tests__audit_report_markdown.snap.new
crates/gitpurge-core/src/git/: composite.rs  git2_backend.rs  gix_backend.rs  mod.rs
crates/gitpurge-core/src/history/: import.rs  migrate.rs  mod.rs  schema.sql  sqlite.rs  trends.rs
crates/gitpurge-core/src/model/: classification.rs  mod.rs  objects.rs  plan.rs  policy.rs  repo.rs  snapshot.rs  trend.rs  value_objects.rs
crates/gitpurge-core/src/policy/: age.rs  mod.rs  naming.rs  protection.rs
crates/gitpurge-core/src/report/: html.rs  json.rs  markdown.rs  mod.rs
crates/gitpurge-core/src/scan/: filter.rs  mod.rs
crates/gitpurge-core/src/snapshots/: gitpurge_core__tests__audit_report_markdown.snap  gitpurge_core__tests__audit_report_markdown.snap.new
crates/gitpurge-core/src/testkit/: mod.rs
crates/gitpurge-core/tests/: integration.rs  report_golden.rs  safe_07_secrets.rs  safety.rs
crates/gitpurge-core/tests/snapshots/: report_golden__html_report.snap  report_golden__json_report.snap  report_golden__md_audit_report.snap  report_golden__md_trend_report.snap
delivery/: AGENT_GUIDE.md  BATON.md  CONVENTIONS.md  DEFINITION_OF_DONE.md  README.md  phase-0-foundations.md  phase-1-core-read.md  phase-2-backup-restore.md  phase-3-cli.md  phase-4-ui.md  phase-5-reporting.md  phase-6-auth.md  phase-7-packaging-ci.md  phase-8-hardening-release.md  phase-9-13-retrofit.md
delivery/tasks/: P0-tasks.md  P1-tasks.md  P2-tasks.md  P3-tasks.md  P4-tasks.md  P5-P8-tasks.md  P9-P13-tasks.md  README.md
docs/: 00-vision-and-scope.md  01-tech-stack.md  02-architecture.md  03-domain-model.md  04-core-spec.md  05-cli-spec.md  06-ui-spec.md  07-ui-design-system.md  08-backup-and-restore.md  09-authentication.md  10-reporting-and-history.md  11-safety-model.md  12-testing-strategy.md  13-distribution-and-ci.md  14-security.md  15-extensibility.md  README.md  ROADMAP.md  developer-guide.md  user-guide.md
docs/adr/: ADR-0001-hexagonal-architecture.md  ADR-0002-git-engine-hybrid.md  ADR-0003-ui-vue-tauri.md  ADR-0004-shared-core-embedding.md  ADR-0005-backup-format.md  ADR-0006-unsafe-libgit2-timeouts.md  README.md
scripts/: verify-release.sh
