# gitpurge-desktop — Tauri v2 backend (CONVENTIONS §2).
# This crate MUST NOT depend on gix / git2 / rusqlite / keyring directly.
# All domain logic goes through gitpurge-core.
[package]
name = "gitpurge-desktop"
description = "Desktop GUI backend for Git Purge (Tauri v2)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "gitpurge-desktop"
path = "src/main.rs"

[dependencies]
gitpurge-core = { path = "../../../crates/gitpurge-core" }
tauri = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
