# gitpurge-desktop — Tauri v2 backend (CONVENTIONS §2).
# This crate MUST NOT depend on gix / git2 / rusqlite / keyring directly.
# All domain logic goes through gitpurge-core.
[package]
name = "gitpurge-desktop"
description = "Desktop GUI backend for Git Purge (Tauri v2)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "gitpurge-desktop"
path = "src/main.rs"

[dependencies]
gitpurge-core = { path = "../../../crates/gitpurge-core", version = "0.3.3" }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tauri-plugin-dialog = "2"
time = { workspace = true }
ulid = { workspace = true }

# Linux: set GTK application name for the taskbar display
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
tauri-build = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
